// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store:middlewares:documents:utils getOpenExtensionsFilters returns a view open filter 1`] = `
Array [
  Object {
    "extensions": Array [
      "vitv",
      "vipv",
      "vidv",
      "vimv",
      "vikv",
      "vihv",
      "viga",
      "viba",
      "pus05",
      "pus11",
    ],
    "name": "Any VIMA views",
  },
  Object {
    "extensions": Array [
      "vitv",
    ],
    "name": "TextView",
  },
  Object {
    "extensions": Array [
      "vipv",
    ],
    "name": "PlotView",
  },
  Object {
    "extensions": Array [
      "vidv",
    ],
    "name": "DynamicView",
  },
  Object {
    "extensions": Array [
      "vimv",
    ],
    "name": "MimicView",
  },
  Object {
    "extensions": Array [
      "vikv",
    ],
    "name": "PacketView",
  },
  Object {
    "extensions": Array [
      "vihv",
    ],
    "name": "HistoryView",
  },
  Object {
    "extensions": Array [
      "viga",
    ],
    "name": "GroundAlarmView",
  },
  Object {
    "extensions": Array [
      "viba",
    ],
    "name": "OnboardAlarmView",
  },
  Object {
    "extensions": Array [
      "pus05",
    ],
    "name": "PUS05View",
  },
  Object {
    "extensions": Array [
      "pus11",
    ],
    "name": "PUS11View",
  },
]
`;

exports[`store:middlewares:documents:utils getSaveExtensionsFilters returns a view save filter 1`] = `
Array [
  Array [
    Object {
      "extensions": Array [
        "vipv",
      ],
      "name": "PlotView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vitv",
      ],
      "name": "TextView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vidv",
      ],
      "name": "DynamicView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vihv",
      ],
      "name": "HistoryView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vikv",
      ],
      "name": "PacketView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "vimv",
      ],
      "name": "MimicView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "viga",
      ],
      "name": "GroundAlarmView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "viba",
      ],
      "name": "OnboardAlarmView",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "pus05",
      ],
      "name": "PUS05View",
    },
  ],
  Array [
    Object {
      "extensions": Array [
        "pus11",
      ],
      "name": "PUS11View",
    },
  ],
]
`;
